...
                        " por confiar en Wallapart"),
                  ),
                  RaisedButton(
                    onPressed: () {
                      Navigator.pop(context);
                    },
                    child: Text('Volver a página anterior'),
                  ),
                ],
              ),
            ),
          ],
        ),
...
