...
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                            builder: (context) => WidgetCompra(_producto, _controlador, _usuario)),
                      );
                    },
                    child: const Text("Comprar producto"),
                    color: const Color.fromARGB(255, 248, 231, 80),
                    shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(1000)),
                  ),
                ],
              ),
...
